pgsd-3.2.0/pgsd/pgsd.h

    
    enum pgsd_type
        {
        PGSD_TYPE_UINT8 = 1,
        PGSD_TYPE_UINT16,
        PGSD_TYPE_UINT32,
        PGSD_TYPE_UINT64,
        PGSD_TYPE_INT8,
        PGSD_TYPE_INT16,
        PGSD_TYPE_INT32,
        PGSD_TYPE_INT64,
        PGSD_TYPE_FLOAT,
        PGSD_TYPE_DOUBLE
        };
    enum pgsd_open_flag
        {
        PGSD_OPEN_READWRITE = 1,
        PGSD_OPEN_READONLY,
        PGSD_OPEN_APPEND
        };
    enum pgsd_error
        {
        PGSD_SUCCESS = 0,
        PGSD_ERROR_IO = -1,
        PGSD_ERROR_INVALID_ARGUMENT = -2,
        PGSD_ERROR_NOT_A_PGSD_FILE = -3,
        PGSD_ERROR_INVALID_PGSD_FILE_VERSION = -4,
        PGSD_ERROR_FILE_CORRUPT = -5,
        PGSD_ERROR_MEMORY_ALLOCATION_FAILED = -6,
        PGSD_ERROR_NAMELIST_FULL = -7,
        PGSD_ERROR_FILE_MUST_BE_WRITABLE = -8,
        PGSD_ERROR_FILE_MUST_BE_READABLE = -9,
        };
    enum
        {
        PGSD_NAME_SIZE = 64
        };
    enum
        {
        PGSD_RESERVED_BYTES = 80
        };
    struct pgsd_header
        {
        uint64_t magic;
        uint64_t index_location;
        uint64_t index_allocated_entries;
        uint64_t namelist_location;
        uint64_t namelist_allocated_entries;
        uint32_t schema_version;
        uint32_t pgsd_version;
        char application[PGSD_NAME_SIZE];
        char schema[PGSD_NAME_SIZE];
        char reserved[PGSD_RESERVED_BYTES];
        };
    struct pgsd_index_entry
        {
        uint64_t frame;
        uint64_t N;
        int64_t location;
        uint32_t M;
        uint16_t id;
        uint8_t type;
        uint8_t flags;
        };
    struct pgsd_name_id_pair
        {
        char* name;
        struct pgsd_name_id_pair* next;
        uint16_t id;
        };
    struct pgsd_name_id_map
        {
        struct pgsd_name_id_pair* v;
        size_t size;
        };
    struct pgsd_index_buffer
        {
        struct pgsd_index_entry* data;
        size_t size;
        size_t reserved;
        void* mapped_data;
        size_t mapped_len;
        };
    struct pgsd_byte_buffer
        {
        char* data;
        size_t size;
        size_t reserved;
        };
    struct pgsd_name_buffer
        {
        struct pgsd_byte_buffer data;
        size_t n_names;
        };
    struct pgsd_handle
        {
        MPI_File fh;
        struct pgsd_header header;
        struct pgsd_index_buffer file_index;
        struct pgsd_index_buffer frame_index;
        struct pgsd_index_buffer buffer_index;
        struct pgsd_byte_buffer write_buffer;
        struct pgsd_name_buffer file_names;
        struct pgsd_name_buffer frame_names;
        uint64_t cur_frame;
        long long int file_size;
        enum pgsd_open_flag open_flags;
        struct pgsd_name_id_map name_map;
        uint64_t pending_index_entries;
        uint64_t maximum_write_buffer_size;
        uint64_t index_entries_to_buffer;
        };
    uint32_t pgsd_make_version(unsigned int major, unsigned int minor);
    int pgsd_create_and_open(struct pgsd_handle* handle,
                            const char* fname,
                            const char* application,
                            const char* schema,
                            uint32_t schema_version,
                            enum pgsd_open_flag flags,
                            int exclusive_create);
    int pgsd_open(struct pgsd_handle* handle, const char* fname, enum pgsd_open_flag flags);
    int pgsd_close(struct pgsd_handle* handle);
    int pgsd_end_frame(struct pgsd_handle* handle);
    int pgsd_flush(struct pgsd_handle* handle);
    int pgsd_write_chunk(struct pgsd_handle* handle,
                        const char* name,
                        enum pgsd_type type,
                        uint64_t N,
                        uint32_t M,
                        uint64_t N_global, 
                        uint32_t M_global,
                        uint64_t offset,
                        uint64_t global_size,
                        bool all,
                        uint8_t flags,
                        const void* data);
    const struct pgsd_index_entry*
    pgsd_find_chunk(struct pgsd_handle* handle, uint64_t frame, const char* name);
    int pgsd_read_chunk(struct pgsd_handle* handle, 
                        void* data, 
                        const struct pgsd_index_entry* chunk, 
                        uint64_t N,
                        uint32_t M, 
                        uint32_t offset, 
                        bool all);
    uint64_t pgsd_get_nframes(struct pgsd_handle* handle);
    uint64_t pgsd_get_nnames(struct pgsd_handle* handle);
    size_t pgsd_sizeof_type(enum pgsd_type type);
    const char*
    pgsd_find_matching_chunk_name(struct pgsd_handle* handle, const char* match, const char* prev);
    uint64_t pgsd_get_maximum_write_buffer_size(struct pgsd_handle* handle);
    int pgsd_set_maximum_write_buffer_size(struct pgsd_handle* handle, uint64_t size);
    uint64_t pgsd_get_index_entries_to_buffer(struct pgsd_handle* handle);
    int pgsd_set_index_entries_to_buffer(struct pgsd_handle* handle, uint64_t number);